--- a/Candeluxe/index.html
+++ b/Candeluxe/index.html
@@ -30,19 +30,129 @@
         <section class="products">
             <h2>Our Products</h2>
             <div class="product-grid">
+                <!-- Repeat this block for each product -->
                 <div class="product">
                     <img src="https://th.bing.com/th/id/R.127444f4b07a17cb64e13e564c571145?rik=PoCo719cP%2bcUnw&pid=ImgRaw&r=0" alt="Candle 1">
                     <h3>Candle 1</h3>
-                    <p>$10.00</p>
+                    <p>Rs100.00</p>
                     <button>Add to Cart</button>
                 </div>
                 <div class="product">
                     <img src="https://i.pinimg.com/originals/0c/d6/5f/0cd65fc29b3b74a8815ec628a0c275ff.jpg" alt="Candle 2">
                     <h3>Candle 2</h3>
-                    <p>$12.00</p>
+                    <p>Rs120.00</p>
                     <button>Add to Cart</button>
                 </div>
-                <!-- Add more products as needed -->
+                <!-- Repeat this block up to 20 products -->
+                <div class="product">
+                    <img src="https://i.pinimg.com/736x/78/ca/ae/78caae56c748fd5c51f650df8be71440.jpg" alt="Candle 3">
+                    <h3>Candle 3</h3>
+                    <p>Rs110.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://i.pinimg.com/originals/b6/54/11/b65411a8d67c8685128a1f1f6fcd9fb9.jpg" alt="Candle 4">
+                    <h3>Candle 4</h3>
+                    <p>Rs150.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://i.pinimg.com/originals/dd/9f/a9/dd9fa9a284ccc9584395be724c132cfc.jpg" alt="Candle 5">
+                    <h3>Candle 5</h3>
+                    <p>Rs140.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://th.bing.com/th/id/OIP.ewDxaCtb6HryArjy7899kAHaLJ?rs=1&pid=ImgDetMain" alt="Candle 6">
+                    <h3>Candle 6</h3>
+                    <p>Rs90.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://i.pinimg.com/736x/e2/2c/1b/e22c1b63e12be48d573228886da4736a.jpg" alt="Candle 7">
+                    <h3>Candle 7</h3>
+                    <p>Rs180.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://i.pinimg.com/736x/28/42/59/284259c6f61c9c7390913565eb3ee96b.jpg" alt="Candle 8">
+                    <h3>Candle 8</h3>
+                    <p>Rs200.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://th.bing.com/th/id/OIP.1wKHhhjXsMInXEn42cxw4QAAAA?rs=1&pid=ImgDetMain" alt="Candle 9">
+                    <h3>Candle 9</h3>
+                    <p>Rs170.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://i.pinimg.com/originals/38/05/09/380509e1f5d05e35b0e769d422fb6e43.jpg" alt="Candle 10">
+                    <h3>Candle 10</h3>
+                    <p>Rs130.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://i.pinimg.com/originals/5f/3f/2f/5f3f2f6b13037b70cc8f681f17e67064.jpg" alt="Candle 11">
+                    <h3>Candle 11</h3>
+                    <p>Rs160.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://th.bing.com/th/id/OIP.Sym2DuV45GOV8m1TyJfINgAAAA?rs=1&pid=ImgDetMain" alt="Candle 12">
+                    <h3>Candle 12</h3>
+                    <p>Rs220.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://th.bing.com/th/id/OIP.bRUj_m4dGm7qGyuGRGupSQAAAA?rs=1&pid=ImgDetMain" alt="Candle 13">
+                    <h3>Candle 13</h3>
+                    <p>Rs190.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://i.pinimg.com/originals/32/69/ca/3269ca7752216bb9a752a5f6b2c362f2.jpg" alt="Candle 14">
+                    <h3>Candle 14</h3>
+                    <p>Rs80.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://i.pinimg.com/originals/6b/3f/3e/6b3f3eda2573147d0147ec7a00b13350.jpg" alt="Candle 15">
+                    <h3>Candle 15</h3>
+                    <p>Rs250.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://i.pinimg.com/736x/93/b1/8f/93b18ff89c29c0873b02c3b75aeac1dc.jpg" alt="Candle 16">
+                    <h3>Candle 16</h3>
+                    <p>Rs230.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://i.pinimg.com/originals/c3/d3/b6/c3d3b68f488576ce3c988f74887586c7.jpg" alt="Candle 17">
+                    <h3>Candle 17</h3>
+                    <p>Rs210.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://i.pinimg.com/originals/0e/72/62/0e7262a7a99f27f7b31dfd796764cdda.jpg" alt="Candle 18">
+                    <h3>Candle 18</h3>
+                    <p>Rs240.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://i.etsystatic.com/26148317/r/il/3ad3cb/2990989276/il_fullxfull.2990989276_9okt.jpg" alt="Candle 19">
+                    <h3>Candle 19</h3>
+                    <p>Rs260.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product">
+                    <img src="https://i.pinimg.com/236x/ea/60/8d/ea608da11499a4e7d65e57e251654d5d.jpg" alt="Candle 20">
+                    <h3>Candle 20</h3>
+                    <p>Rs270.00</p>
+                    <button>Add to Cart</button>
+                </div>
+                <!-- End of products -->
             </div>
         </section>
     </main>
